# Lesson10-SDL3

./: .editorconfig  .gitignore  CMakeLists.txt  Lesson10.c  Lesson10.cpp  Readme.md  Shader.fragment.glsl  Shader.fragment.hlsl  Shader.fragment.metal  Shader.vertex.hlsl  compile-shaders.py
Data/: Shader.fragment.fxb  Shader.fragment.metal  Shader.metallib  Shader.vertex.fxb  Shader.vertex.metal
Data/Shaders/: Shader.fragment.dxb  Shader.fragment.fxb  Shader.vertex.dxb  Shader.vertex.fxb
Scripts/: compile-shaders.py
Sources/: Lesson10.c  matrix.c  matrix.h
Sources/Shaders/: Shader.metal  Shader.vertex.glsl
